src/tui/app/src/snapshots/lha_tui__status_indicator_widget__tests__renders_with_inline_message.snap
---
source: src/harness/tui/src/status_indicator_widget.rs
expression: terminal.backend()
---
"• Working (0s • esc to interrupt) · 1 background terminal running · /ps to view…"
"                                                                                "
