src/tui/app/src/snapshots/lha_tui__status_indicator_widget__tests__renders_with_working_header.snap
---
source: src/harness/tui/src/status_indicator_widget.rs
expression: terminal.backend()
---
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
